objects/EUR_CRM_PRS_Question_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Answer_Condition__c</fullName>
        <label>Answer Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less Than (&lt;)</fullName>
                </value>
                <value>
                    <fullName>Greater Than or Equal (&gt;=)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Answer_Statement__c</fullName>
        <formula>EUR_CRM_PRS_Question__r.EUR_CRM_Question_Statement__c</formula>
        <label>Answer Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, RIGHT(LEFT(RecordType.DeveloperName,6),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Picklist_Display_Order__c</fullName>
        <label>Criteria Picklist Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Picklist_Label__c</fullName>
        <label>Criteria Picklist Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Picklist_Value__c</fullName>
        <label>Criteria Picklist Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Threshold_Currency__c</fullName>
        <label>Criteria Threshold (Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Threshold_Number__c</fullName>
        <label>Criteria Threshold (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Weight__c</fullName>
        <label>Criteria Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Question__c</fullName>
        <label>Question</label>
        <referenceTo>EUR_CRM_PRS_Question__c</referenceTo>
        <relationshipLabel>PRS Question Criteria (EU)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Question_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PRS Question Criteria (EU)</label>
    <listViews>
        <fullName>EUR_BE_All_PRS_Question_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Currency__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_BE_PRS_Question_Criteria</value>
        </filters>
        <label>EUR BE All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_All_PRS_Question_Criteria_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Currency__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_BG_PRS_Question_Criteria</value>
        </filters>
        <label>EUR BG All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PRS-QC-{0000000000}</displayFormat>
        <label>PRS Question Criteria No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRS Question Criteria (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR BE PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR BG PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>PRS Question Criteria</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>